# tdsm

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: prerelease.yml  stable-release.yml
tdsm/: __init__.py
tdsm/base/: __init__.py  _dicts.py  _estimators.py
tdsm/dicts/: __init__.py  _builder.py  _core_dicts.py
tdsm/estimators/: __init__.py  _edmd.py  _koopman_tt.py  edmd.py  koopman_tt.py
tdsm/preprocessing/: __init__.py  _koopman.py
tdsm/solvers/: __init__.py  dual.py  ode.py
tdsm/tenalg/: __init__.py  _einsum.py  _inner_product.py  _tenalg.py
tdsm/tensor/: __init__.py  _base.py  _rank_one.py  _tt_core.py  _tt_operator.py  _tt_tensor.py  types.py
